--- a/core/templates/inc/master.html
+++ b/core/templates/inc/master.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>四川恒心前途教育咨询有限公司 {% block title %}{% endblock %}</title>
+    <title>四川恒心前途教育咨询有限公司-{% block title %}{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="恒心教育，留学群体的一站式管家。致力于向留学生群体提供从海外名校保进、课业辅导、学位认证到移民落户、职业规划、生活辅助的一站式服务。"/>
     <meta name="keywords" content="学历学位认证 生活辅助 名校直通 海外留学 留学 名校保进 移民落户 落户 职业规划 快速本科 游学 夏令营 冬令营" />
@@ -46,7 +46,7 @@
         <div class="hxco-container">
             <div class="row" style="min-width: 1280px;">
                 <div class="col-xs-2 text-center">
-                    <div id="hxco-logo" style="min-width: 60px;"><a href="#"><img src="/static/images/web/logo.png" style="height: 20px;width: auto;margin-top:-5px;">&nbsp;&nbsp;Hex Edu</a></div>
+                    <div id="hxco-logo" style="min-width: 60px;"><a href="/"><img src="/static/images/web/index/logo.png" style="height: 30px;width: auto;margin-top:-5px;"></a></div>
                 </div>
                 <div class="col-xs-10 text-center">
                     {#					<ul>#}
