--- a/core/templates/web/assistedliving.html
+++ b/core/templates/web/assistedliving.html
@@ -1,5 +1,5 @@
 {% extends "inc/master.html" %}
-
+{% block title %}生活辅助{% endblock %}
 {% block head %}
 
     <script src="/static/js/headerjs/scrollspy.js"></script>
@@ -244,7 +244,7 @@
             <div class="row" style=" margin-top: 3em;">
                 <div class="col-xs-4 animate-box fadeInUp animated ">
                     <div class="hexoco-project-item">
-                        <img src="/static/images/web/live/2.jpg" width="100%" alt="Image" class="img-responsive">
+                        <img src="/static/images/web/live/2.jpg" width="100%" alt="四川恒心前途教育咨询-餐厅推荐" class="img-responsive">
                         <div class="hexoco-text">
                             <h2>餐厅推荐</h2>
                             <p>根据您的需求推荐当地优质餐厅与菜品，物美价廉的也可以是盛宴</p>
@@ -253,7 +253,7 @@
                 </div>
                 <div class="col-xs-4 animate-box fadeInUp animated">
                     <div class="hexoco-project-item">
-                        <img src="/static/images/web/live/3.jpg" width="100%" alt="Image" class="img-responsive">
+                        <img src="/static/images/web/live/3.jpg" width="100%" alt="四川恒心前途教育咨询-交通出行" class="img-responsive">
                         <div class="hexoco-text">
                             <h2>交通出行</h2>
                             <p>日常出行向导，避开拥堵交通与嘈杂人群；会员机票预订服务，让你的远行与归国路，变得如此简单</p>
@@ -262,7 +262,7 @@
                 </div>
                 <div class="col-xs-4 animate-box fadeInUp animated">
                     <div class="hexoco-project-item">
-                        <img src="/static/images/web/live/4.jpg" width="100%" alt="Image" class="img-responsive">
+                        <img src="/static/images/web/live/4.jpg" width="100%" alt="四川恒心前途教育咨询-体验挂号" class="img-responsive">
                         <div class="hexoco-text">
                             <h2>体检挂号</h2>
                             <p>提供全球多家优质医院筛查体检的预约挂号功能，你的健康对我们很重要</p>
@@ -271,7 +271,7 @@
                 </div>
                 <div class="col-xs-4 animate-box fadeInUp animated">
                     <div class="hexoco-project-item">
-                        <img src="/static/images/web/live/5.jpg" width="100%" alt="Image" class="img-responsive">
+                        <img src="/static/images/web/live/5.jpg" width="100%" alt="四川恒心前途教育咨询-住房建议" class="img-responsive">
                         <div class="hexoco-text">
                             <h2>住房建议</h2>
                             <p>怎样避免无良中介“携款私逃”？学校周边还有哪块风水宝地？恒心为你提供留学租房时的种种建议，让你在异乡也能有张温床</p>
@@ -280,7 +280,7 @@
                 </div>
                 <div class="col-xs-4 animate-box fadeInUp animated">
                     <div class="hexoco-project-item">
-                        <img src="/static/images/web/live/6.jpg" width="100%" alt="Image" class="img-responsive">
+                        <img src="/static/images/web/live/6.jpg" width="100%" alt="四川恒心前途教育咨询-经法咨询" class="img-responsive">
                         <div class="hexoco-text">
                             <h2>经法咨询</h2>
                             <p>恒心会员免费享受留学途中的经济法律咨询服务，合同条款的隐藏内容，银行卡办理的注意事项，让法律成为你保护自己最好的武器</p>
@@ -343,7 +343,7 @@
             <div class="row" style=" margin-top: 4em;">
                 <div class="col-xs-3 animate-box fadeInUp animated ">
                     <div class="hexoco-project-item">
-                        <img src="/static/images/web/loan-1.png" alt="Image" class="img-responsive">
+                        <img src="/static/images/web/loan-1.png" alt="四川恒心前途教育咨询-科技创业贷款咨询" class="img-responsive">
                         <div class="hexoco-text">
                             <h2>科技创业贷款</h2>
                         </div>
@@ -351,7 +351,7 @@
                 </div>
                 <div class="col-xs-3 animate-box fadeInUp animated">
                     <div class="hexoco-project-item">
-                        <img src="/static/images/web/loan-2.png" alt="Image" class="img-responsive">
+                        <img src="/static/images/web/loan-2.png" alt="四川恒心前途教育咨询-自主创业贷款咨询" class="img-responsive">
                         <div class="hexoco-text">
                             <h2>自主创业贷款</h2>
                         </div>
@@ -359,7 +359,7 @@
                 </div>
                 <div class="col-xs-3 animate-box fadeInUp animated">
                     <div class="hexoco-project-item">
-                        <img src="/static/images/web/loan-3.png" alt="Image" class="img-responsive">
+                        <img src="/static/images/web/loan-3.png" alt="四川恒心前途教育咨询-个人创业贷款咨询" class="img-responsive">
                         <div class="hexoco-text">
                             <h2>个人创业贷款</h2>
                         </div>
@@ -367,7 +367,7 @@
                 </div>
                 <div class="col-xs-3 animate-box fadeInUp animated">
                     <div class="hexoco-project-item">
-                        <img src="/static/images/web/loan-4.png" alt="Image" class="img-responsive">
+                        <img src="/static/images/web/loan-4.png" alt="四川恒心前途教育咨询-青少年创业贷款" class="img-responsive">
                         <div class="hexoco-text">
                             <h2>青少年创业贷款</h2>
                         </div>
@@ -375,7 +375,7 @@
                 </div>
                 <div class="col-xs-3 animate-box fadeInUp animated">
                     <div class="hexoco-project-item">
-                        <img src="/static/images/web/loan-5.png" alt="Image" class="img-responsive">
+                        <img src="/static/images/web/loan-5.png" alt="四川恒心前途教育咨询-高校毕业生自主创业贷款" class="img-responsive">
                         <div class="hexoco-text">
                             <h2>高校毕业生自主创业贷款</h2>
                         </div>
@@ -383,7 +383,7 @@
                 </div>
                 <div class="col-xs-3 animate-box fadeInUp animated">
                     <div class="hexoco-project-item">
-                        <img src="/static/images/web/loan-6.png" alt="Image" class="img-responsive">
+                        <img src="/static/images/web/loan-6.png" alt="四川恒心前途教育咨询-创业基金贷款" class="img-responsive">
                         <div class="hexoco-text">
                             <h2>创业基金贷款</h2>
                         </div>
@@ -391,7 +391,7 @@
                 </div>
                 <div class="col-xs-3 animate-box fadeInUp animated">
                     <div class="hexoco-project-item">
-                        <img src="/static/images/web/loan-7.png" alt="Image" class="img-responsive">
+                        <img src="/static/images/web/loan-7.png" alt="四川恒心前途教育咨询-普通创业贷款" class="img-responsive">
                         <div class="hexoco-text">
                             <h2>普通创业贷款</h2>
                         </div>
@@ -442,7 +442,7 @@
                 </div>
                 <div class="col-xs-12 text-center">
                     <div class="col-xs-12 text-center" style="margin-top: 1em;">
-                        <img src="/static/images/web/liveflow3.png" style="width: 100%;height: auto">
+                        <img src="/static/images/web/liveflow3.png" style="width: 80%;height: auto">
                     </div>
                 </div>
             </div>
