--- a/core/templates/web/course-guide.html
+++ b/core/templates/web/course-guide.html
@@ -1,6 +1,6 @@
 {% extends "inc/master.html" %}
 
-
+{% block title %}学术辅导{% endblock %}
 {% block head %}
     <script type="text/javascript">
         $(document).ready(function () {
