--- a/core/templates/web/highschool.html
+++ b/core/templates/web/highschool.html
@@ -1,5 +1,5 @@
 {% extends "inc/master.html" %}
-
+{% block title %}初高中申请{% endblock %}
 {% block head %}
     <script type="text/javascript">
         $(document).ready(function () {
