--- a/core/templates/web/immigrant.html
+++ b/core/templates/web/immigrant.html
@@ -1,6 +1,6 @@
 {% extends "inc/master.html" %}
 
-
+{% block title %}移民落户咨询{% endblock %}
 {% block head %}
     <script type="text/javascript">
     $(document).ready(function () {
