--- a/core/templates/web/information.html
+++ b/core/templates/web/information.html
@@ -1,6 +1,6 @@
 {% extends "inc/master.html" %}
 {% load poll_extras %}
-
+{% block title %}行业资讯{% endblock %}
 {% block head %}
     <script type="text/javascript">
         $(document).ready(function () {
@@ -48,23 +48,7 @@
 
         </div>
 
-        <div class="row">
-            {#            <ul class="list-pager">#}
-            {#                <li><a href="?page=1">首页</a></li>#}
-            {#                {% if paged.has_previous %}#}
-            {#                  <li><a href="?page={{ filmpaged.previous_page_number }}&m_type={{ m_type }}&area={{ country }}&year={{ year }}">上一页</a></li>#}
-            {#                    {% endif %}#}
-            {#                {% for p in rangedpages %}#}
-            {#                    <li><a href="?page={{ p }}&m_type={{ m_type }}&area={{ country }}&year={{ year }}">{{ p }}页</a></li>#}
-            {##}
-            {#                      {% endfor %}#}
-            {#                    <li>第 {{ filmpaged.number }} 页, 共 {{ filmpaged.paginator.num_pages }} 页</li>#}
-            {#                    {% if filmpaged.has_next %}#}
-            {#                    <li> <a href="?page={{ filmpaged.next_page_number }}&m_type={{ m_type }}&area={{ country }}&year={{ year }}">下一页</a></li>#}
-            {#                    {% endif %}#}
-            {#                    <li><a href="?page={{ lastpagenum }}&m_type={{ m_type }}&area={{ country }}&year={{ year }}">尾页</a></li>#}
-            {#            </ul>#}
-
+        <div class="row text-center">
             <nav aria-label="Page navigation">
                 <ul class="pagination">
                     {% if paged.has_previous %}
