--- a/core/templates/web/information_detail.html
+++ b/core/templates/web/information_detail.html
@@ -1,6 +1,6 @@
 {% extends "inc/master.html" %}
 {% load poll_extras %}
-
+{% block title %}行业资讯详情-{{ act.title }}{% endblock %}
 {% block head %}
     <script type="text/javascript">
         $(document).ready(function () {
