--- a/core/templates/web/ksbk.html
+++ b/core/templates/web/ksbk.html
@@ -1,5 +1,7 @@
 {% extends "inc/master.html" %}
 
+{% block title %}快速本科{% endblock %}
+
 {% block head %}
     <script type="text/javascript">
         $(document).ready(function () {
@@ -138,7 +140,7 @@
 {##}
 {#        </div>#}
         <div class="col-xs-12 text-center" style="padding-bottom: 3em;margin:-2em auto;text-align: center;">
-                <div  class="col-xs-10 col-xs-offset-1">
+                <div style="width: 900px;margin: 0 auto; text-align: center;">
                     <div class="process-div processbg1" style="z-index: 7; margin-left: 0px;">
                         <i class="icon-file-text2" style="color: #fff;"></i>
                         <p>提交资料</p>
