--- a/core/templates/web/certification.html
+++ b/core/templates/web/certification.html
@@ -1,5 +1,5 @@
 {% extends "inc/master.html" %}
-
+{% block title %}学历学位认证{% endblock %}
 {% block head %}
     <script type="text/javascript">
     $(document).ready(function () {
@@ -283,8 +283,8 @@
                 <div class="col-xs-12 text-center"  style="margin-bottom: 3em;">
                     <h1>申请所需流程</h1>
                 </div>
-                <div class="col-xs-12 text-center" style="margin-top: -2em;">
-                    <img src="/static/images/web/certification/3.jpg" style="width: 40%;height: auto">
+                <div class="col-xs-12 text-center" style="margin-top: -3em;">
+                    <img src="/static/images/web/certification/3.jpg" style="width: 47%;height: auto">
                 </div>
             </div>
         </div>
