--- a/core/templates/web/education.html
+++ b/core/templates/web/education.html
@@ -1,6 +1,6 @@
 {% extends "inc/master.html" %}
 
-
+{% block title %}名校直通{% endblock %}
 {% block head %}
     <script type="text/javascript">
     $(document).ready(function () {
