--- a/core/templates/web/index.html
+++ b/core/templates/web/index.html
@@ -1,5 +1,5 @@
 {% extends "inc/master.html" %}
-
+{% block title %}首页{% endblock %}
 {% block head %}
     <script type="text/javascript">
         $(document).ready(function () {
@@ -44,20 +44,30 @@
         <!-- Indicators -->
         <ol class="carousel-indicators">
             <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-{#            <li data-target="#carousel-example-generic" data-slide-to="1"></li>#}
+            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
 {#            <li data-target="#carousel-example-generic" data-slide-to="2"></li>#}
         </ol>
 
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
             <div class="item active">
-                <img src="/static/images/web/index/2.jpg" style="width: 100%;"  alt="...">
+                <img src="/static/images/web/index/2.jpg" style="width: 100%;"  alt="四川恒心前途教育咨询">
                 <div class="carousel-caption" style="bottom: 150px;">
                     <h1 class="carousel-h1 animate-box">恒心教育</h1>
                     <br/>
                     <div class="carousel-h2 animate-box"><span>留学群体的一站式管家</span></div>
                     <br/>
                     <p class="carousel-p animate-box">HEX, YOUR TROUBLE TERMINATOR.</p>
+                </div>
+            </div>
+            <div class="item">
+                <img src="/static/images/web/index/3.jpg" style="width: 100%;"  alt="四川恒心前途教育咨询">
+                <div class="carousel-caption" style="bottom: 150px;">
+{#                    <h1 class="carousel-h1 animate-box">恒心教育</h1>#}
+{#                    <br/>#}
+{#                    <div class="carousel-h2 animate-box"><span>留学群体的一站式管家</span></div>#}
+{#                    <br/>#}
+{#                    <p class="carousel-p animate-box">HEX, YOUR TROUBLE TERMINATOR.</p>#}
                 </div>
             </div>
         </div>
@@ -86,9 +96,7 @@
 						</span>
                         <h3>云计算+大数据库</h3>
                         <p>海量学校与客户资源匹配，找到最适合你的解决路径</p>
-{#                        <p>源源不绝的创新与构想打破传统营销推广模式，更多需求者的福音</p>#}
-{#                        <p>强大的IT技术让资源与客户大数据平台的搭建变得精准而简单</p>#}
-                        {#						<p><a href="#" class="btn btn-primary">Learn More</a></p>#}
+
                     </div>
                 </div>
                 <div class="col-xs-3">
@@ -98,8 +106,7 @@
 						</span>
                         <h3>用户中心进度查询</h3>
                         <p>用户中心进度查询，随时随地了解项目进度，让你的等待变得省时又安心。</p>
-{#                        <p>针对不同人群现状，灵活制定多种可对比解决方案，让选择权始终在客户手中；</p>#}
-{#                        <p>全程跟进答疑，每阶段准时反馈，辅之官网进度查询功能，每一步都让客户安心</p>#}
+
                     </div>
                 </div>
                 <div class="col-xs-3">
@@ -109,9 +116,7 @@
 						</span>
                         <h3>名校直通</h3>
                         <p>TOP100名校轻松保进，遇对了人，拿OFFER也可以像拿快递一样简单；</p>
-{#                        <p>完备的售后体系与健全的应急备案作保障，决不让任何一个客户空手而归；</p>#}
-{#                        <p>会员奖励机制让每一个来到恒心的人在被服务的同时，还能有利可图；</p>#}
-{#                        <p>不定期开展留学生线上活动，动动手指就能让课余生活变得有声有色</p>#}
+
                     </div>
                 </div>
                 <div class="col-xs-3 ">
@@ -121,11 +126,7 @@
 						</span>
                         <h3>会员福利多多</h3>
                         <p>会员福利多多，恒心微管家让你免费享受黑卡持有者般的高配生活礼遇。</p>
-{#                        <p>恒心有最稳健而资深的项目直接合作方：</p>#}
-{#                        <p>xx培训学校（名称？）</p>#}
-{#                        <p>丹佛宏思学院</p>#}
-{#                        <p>猎聘网北美总部</p>#}
-{#                        <p>EKKO Development Group</p>#}
+
                     </div>
                 </div>
             </div>
@@ -254,7 +255,7 @@
 					</div>
 
                     <div class="feature-banner animate-box" data-animate-effect="fadeInLeft" >
-                        <a href="/u/index" class="btn btn-info">MORE&nbsp;&nbsp;&gt;&gt;</a>
+                        <a href="/u/index" class="btn btn-info">用户中心登录&nbsp;&nbsp;&gt;&gt;</a>
                     </div>
                 </div>
 
@@ -280,19 +281,13 @@
                         <div class="display-tc">
                             <div class="col-xs-3 animate-box">
                                 <div class="feature-center">
-                                    {#								<span class="icon">#}
-                                    {#									<i class="icon-briefcase"></i>#}
-                                    {#								</span>#}
-                                    <span class="counter js-counter" data-from="0" data-to="5" data-speed="5000" data-refresh-interval="100" style="">1</span>
+                                    <span class="counter js-counter" data-from="0" data-to="2" data-speed="5000" data-refresh-interval="100" style="">1</span>
                                     <span style="font-size: 30px;color:rgba(63, 209, 234, 0.64);">年</span>
                                     <span class="counter-label" style="">业内口碑名列前茅</span>
                                 </div>
                             </div>
                             <div class="col-xs-3 animate-box">
                                 <div class="feature-center">
-                                    {#								<span class="icon">#}
-                                    {#									<i class="icon-clock"></i>#}
-                                    {#								</span>#}
 
                                     <span class="counter js-counter" data-from="0" data-to="121" data-speed="5000" data-refresh-interval="100">1</span>
                                     <span style="font-size: 30px;color:rgba(63, 209, 234, 0.64);">名</span>
@@ -302,9 +297,6 @@
                             </div>
                             <div class="col-xs-3 animate-box">
                                 <div class="feature-center">
-                                    {#								<span class="icon">#}
-                                    {#									<i class="icon-clock"></i>#}
-                                    {#								</span>#}
 
                                     <span class="counter js-counter" data-from="0" data-to="952" data-speed="5000" data-refresh-interval="100">1</span>
                                     <span style="font-size: 30px;color:rgba(63, 209, 234, 0.64);">人</span>
@@ -314,9 +306,6 @@
                             </div>
                             <div class="col-xs-3 animate-box">
                                 <div class="feature-center">
-                                    {#								<span class="icon">#}
-                                    {#									<i class="icon-clock"></i>#}
-                                    {#								</span>#}
 
                                     <span class="counter js-counter" data-from="0" data-to="98" data-speed="5000" data-refresh-interval="100">1</span>
                                     <span style="font-size: 30px;color:rgba(63, 209, 234, 0.64);">%</span>
