--- a/core/templates/web/mxztc.html
+++ b/core/templates/web/mxztc.html
@@ -1,5 +1,5 @@
 {% extends "inc/master.html" %}
-
+{% block title %}名校保进直通车{% endblock %}
 {% block head %}
     <script type="text/javascript">
     $(document).ready(function () {
@@ -237,7 +237,7 @@
                 <h1>保进办理流程</h1>
             </div>
             <div class="col-xs-12 text-center" style="padding-bottom: 3em;margin-top:-2em;">
-                <div style="width: 1200px;">
+                <div style="width: 1200px;margin:0 auto; text-align: center;">
                 <div class="process-div processbg1" style="z-index: 7; margin-left: 0px;">
                     <i class="icon-file-text2" style="color: #fff;"></i>
                     <p>提交资料</p>
