--- a/core/templates/web/studytour.html
+++ b/core/templates/web/studytour.html
@@ -1,6 +1,6 @@
 {% extends "inc/master.html" %}
 
-
+{% block title %}游学之旅{% endblock %}
 {% block head %}
     <script type="text/javascript">
         $(document).ready(function () {
