--- a/core/templates/web/zygh.html
+++ b/core/templates/web/zygh.html
@@ -1,5 +1,5 @@
 {% extends "inc/master.html" %}
-
+{% block title %}职业规划{% endblock %}
 {% block head %}
     <script type="text/javascript">
     $(document).ready(function () {
@@ -28,7 +28,7 @@
                     <div class="col-xs-4">
                          <a href="https://www.macysinc.com/" target="_blank">
                         <div class="hexoco-project-item text-center" style="margin:0 auto; text-align:center">
-                            <img src="/static/images/web/zygh/Macy's.png" style="margin:20px auto auto auto;" alt="Image" class="img-responsive">
+                            <img src="/static/images/web/zygh/Macy's.png" style="margin:20px auto auto auto;" alt="四川恒心前途教育咨询-梅西百货" class="img-responsive">
                             <div class="hexoco-text">
                                 <h2>梅西百货</h2>
                             </div>
@@ -38,7 +38,7 @@
                     <div class="col-xs-4">
                         <a href="https://www.aep.com/" target="_blank">
                             <div class="hexoco-project-item">
-                                <img src="/static/images/web/zygh/us_elecric.png" style="margin:20px auto auto auto;" alt="Image" class="img-responsive">
+                                <img src="/static/images/web/zygh/us_elecric.png" style="margin:20px auto auto auto;" alt="四川恒心前途教育咨询-美国电力" class="img-responsive">
                                 <div class="hexoco-text">
                                     <h2>美国电力</h2>
                                 </div>
@@ -48,7 +48,7 @@
                     <div class="col-xs-4">
                         <a href="https://www.cvshealth.com/" target="_blank">
                         <div class="hexoco-project-item">
-                            <img src="/static/images/web/zygh/cvs.png" style="margin:20px auto auto auto;" alt="Image"  class="img-responsive">
+                            <img src="/static/images/web/zygh/cvs.png" style="margin:20px auto auto auto;" alt="四川恒心前途教育咨询-CVS"  class="img-responsive">
                             <div class="hexoco-text">
                                 <h2>CVS</h2>
                             </div>
@@ -107,12 +107,14 @@
             </div>
             <div class ="row" style="padding-top:1em;">
                 <div class="col-xs-6 col-xs-offset-3">
+                    <a href="https://www.liepin.com/">
                         <div class="hexoco-project-item">
-                            <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
+                            <img src="/static/images/web/zygh/liepin.png" style="margin:20px auto auto auto;" alt="四川恒心前途教育咨询-猎聘网合作" class="img-responsive">
                             <div class="hexoco-text">
                                 <h2>猎聘网</h2>
                             </div>
                         </div>
+                    </a>
                 </div>
             </div>
             <div class="row" style="margin-top:3em;">
