--- a/core/templates/web/information.html
+++ b/core/templates/web/information.html
@@ -35,9 +35,9 @@
                                     <li class="article--meta_item -date">{{ p.dimDate | date:"Y-m-d" }}</li>
                                 </ul>
                             </div>
-                            <div class="article--content">
-                                <p>{{ p.content | spiltcontent:200 }}</p>
-                            </div>
+{#                            <div class="article--content">#}
+{#                                <p>{{ p.content | spiltcontent:200 }}</p>#}
+{#                            </div>#}
                             <div class="article--footer">
                                 <a href="/information_detail/{{ p.id }}?page={{ page }}" class="link">Read More</a>
                             </div>
