--- a/core/templates/inc/master.html
+++ b/core/templates/inc/master.html
@@ -8,7 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
-
+<meta name="baidu-site-verification" content="7ljXKkiE8E" />
 	<link rel="stylesheet" href="/static/css/headercss/animate.css">
     <link rel="stylesheet" href="/static/css/icomoon/style.css">
 	<link rel="stylesheet" href="/static/css/bootstrap.css">
