--- a/core/templates/inc/master.html
+++ b/core/templates/inc/master.html
@@ -46,7 +46,7 @@
 		<div class="hxco-container">
 			<div class="row">
 				<div class="col-xs-2 text-center">
-					<div id="hxco-logo" style="margin-top: 0px;"><a href="#"><img src="/static/images/web/logo.png" style="height: 20px;width: auto;margin-top:-5px;">&nbsp;&nbsp;HexEdu</a></div>
+					<div id="hxco-logo" style="margin-top: 0px;"><a href="#"><img src="/static/images/web/index/logo.png" style="height: 30px;width: auto;margin-top:-5px;"></a></div>
 				</div>
 				<div class="col-xs-10 text-center menu-1">
 {#					<ul>#}
