--- a/core/templates/inc/master.html
+++ b/core/templates/inc/master.html
@@ -245,7 +245,20 @@
 <script src="/static/js/headerjs/jquery.magnific-popup.min.js"></script>
 <script src="/static/js/headerjs/magnific-popup-options.js"></script>
 <script src="/static/js/headerjs/main.js"></script>
-
+<script type='text/javascript'>
+    (function(m, ei, q, i, a, j, s) {
+        m[i] = m[i] || function() {
+            (m[i].a = m[i].a || []).push(arguments)
+        };
+        j = ei.createElement(q),
+            s = ei.getElementsByTagName(q)[0];
+        j.async = true;
+        j.charset = 'UTF-8';
+        j.src = '//static.meiqia.com/dist/meiqia.js';
+        s.parentNode.insertBefore(j, s);
+    })(window, document, 'script', '_MEIQIA');
+    _MEIQIA('entId', 53222);
+</script>
 </body>
 </html>
 
