--- a/core/templates/web/aboutus.html
+++ b/core/templates/web/aboutus.html
@@ -2,23 +2,23 @@
 {% block title %}关于我们{% endblock %}
 {% block head %}
     <script type="text/javascript">
-    $(document).ready(function () {
-        $('#about_us').prop('class', 'actived');
-    });
+        $(document).ready(function () {
+            $('#about_us').prop('class', 'actived');
+        });
     </script>
-{#    <script>#}
-{#      var map;#}
-{#      function initMap() {#}
-{#        map = new google.maps.Map(document.getElementById('map'), {#}
-{#          center: {lat: -34.397, lng: 150.644},#}
-{#          zoom: 8#}
-{#        });#}
-{#      }#}
-{#    </script>#}
-{#    <script src="https://maps.googleapis.com/maps/api/js?callback=initMap"#}
-{#    async defer></script>#}
-{#    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>#}
-{#    <script src="/static/js/googlemaps/default.js"></script>#}
+    {#    <script>#}
+    {#      var map;#}
+    {#      function initMap() {#}
+    {#        map = new google.maps.Map(document.getElementById('map'), {#}
+    {#          center: {lat: -34.397, lng: 150.644},#}
+    {#          zoom: 8#}
+    {#        });#}
+    {#      }#}
+    {#    </script>#}
+    {#    <script src="https://maps.googleapis.com/maps/api/js?callback=initMap"#}
+    {#    async defer></script>#}
+    {#    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>#}
+    {#    <script src="/static/js/googlemaps/default.js"></script>#}
     <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=eyRpYitodqbeGnjrNqxFfdUwfvD19krQ"></script>
 {% endblock %}
 
@@ -35,16 +35,16 @@
         </div>
         <div class="row">
             <div class="col-xs-6 animate-box fadeInUp animated">
-                    <div class="hexoco-project-item">
-                        <img src="/static/images/web/about/1.jpg" width="100%" alt="四川恒心前途教育咨询-年轻却不轻狂的团队" class="img-responsive">
-                        <div class="hexoco-text">
-                            <h2>年轻却不轻狂的团队</h2>
-                            <p>恒心团队多由海外名校毕业，年龄层与目标客户群体相仿，能精准把握当下留学生的心态与需求；</p>
-                            <p>源源不绝的创新与构想打破传统营销推广模式，更多需求者的福音；</p>
-                            <p>强大的IT技术让资源与客户大数据平台的搭建变得精准而简单</p>
-                        </div>
+                <div class="hexoco-project-item">
+                    <img src="/static/images/web/about/1.jpg" width="100%" alt="四川恒心前途教育咨询-年轻却不轻狂的团队" class="img-responsive">
+                    <div class="hexoco-text">
+                        <h2>年轻却不轻狂的团队</h2>
+                        <p>恒心团队多由海外名校毕业，年龄层与目标客户群体相仿，能精准把握当下留学生的心态与需求；</p>
+                        <p>源源不绝的创新与构想打破传统营销推广模式，更多需求者的福音；</p>
+                        <p>强大的IT技术让资源与客户大数据平台的搭建变得精准而简单</p>
                     </div>
                 </div>
+            </div>
 
             <div class="col-xs-6 animate-box fadeInUp animated">
                 <div class="hexoco-project-item">
@@ -60,17 +60,17 @@
         </div>
         <div class="row">
             <div class="col-xs-6 animate-box fadeInUp animated">
-                    <div class="hexoco-project-item">
-                        <img src="/static/images/web/about/3.jpg" width="100%" alt="四川恒心前途教育咨询-大同却大不同的体验" class="img-responsive">
-                        <div class="hexoco-text">
-                            <h2>大同却大不同的体验</h2>
-                            <p>全球代理四方汇集最及时的需求动态与政策走向；</p>
-                            <p>完备的售后体系与健全的应急备案作保障，决不让任何一个客户空手而归；</p>
-                            <p>会员奖励机制让每一个来到恒心的人在被服务的同时，还能有利可图；</p>
-                            <p>不定期开展留学生线上活动，动动手指就能让课余生活变得有声有色</p>
-                        </div>
+                <div class="hexoco-project-item">
+                    <img src="/static/images/web/about/3.jpg" width="100%" alt="四川恒心前途教育咨询-大同却大不同的体验" class="img-responsive">
+                    <div class="hexoco-text">
+                        <h2>大同却大不同的体验</h2>
+                        <p>全球代理四方汇集最及时的需求动态与政策走向；</p>
+                        <p>完备的售后体系与健全的应急备案作保障，决不让任何一个客户空手而归；</p>
+                        <p>会员奖励机制让每一个来到恒心的人在被服务的同时，还能有利可图；</p>
+                        <p>不定期开展留学生线上活动，动动手指就能让课余生活变得有声有色</p>
                     </div>
                 </div>
+            </div>
 
             <div class="col-xs-6 animate-box fadeInUp animated">
                 <div class="hexoco-project-item">
@@ -111,20 +111,82 @@
                         <span>--吴同学</span>
                     </div>
                 </div>
-{#                <div class="col-xs-8 col-xs-offset-2 text-center heading-section animate-box fadeInUp animated" style="margin-top: 3em;">#}
-{#                    <h4>留学云计算+大数据平台</h4>#}
-{#                </div>#}
-{#                <div class="text-center">#}
-{#                    <img src="/static/images/web/yjs.png">#}
-{#                </div>#}
+                {#                <div class="col-xs-8 col-xs-offset-2 text-center heading-section animate-box fadeInUp animated" style="margin-top: 3em;">#}
+                {#                    <h4>留学云计算+大数据平台</h4>#}
+                {#                </div>#}
+                {#                <div class="text-center">#}
+                {#                    <img src="/static/images/web/yjs.png">#}
+                {#                </div>#}
                 <div class="col-xs-8 col-xs-offset-2 text-center heading-section animate-box fadeInUp animated" style="margin-top: 5em;">
-                    <h4>招商与合作</h4>
+                    <h4>加入我们</h4>
+                </div>
+                <div class="col-xs-8 col-xs-offset-2 text-center animate-box fadeInUp animated">
+                    <h1>招商与合作</h1>
                     <p>不论你是有我们尚缺的同类型业务，还是想要完善自己的版图，只要你有意愿帮助到更多的留学群体，都欢迎你联系我们，洽谈合作。</p>
                 </div>
-                <div class="text-center">
+                <div class="text-center col-xs-12" style="margin-top: 2em;">
                     <img src="/static/images/web/hz.png">
                 </div>
+                <div class="row">
+                    <div class="row">
+                        <div class="col-xs-12 text-center" style="margin-bottom: 3em;margin-top: 3em;" >
+                            <h1>恒心精英计划</h1>
+                            <p>HEX ELITE，让更多过来人，加入这场海外应援。</p>
+                        </div>
 
+                    </div>
+
+                    <div class="col-xs-6">
+                        <img src="/static/images/web/about/elite.jpg " alt="hexelite-恒心精英计划" style="width: 100%">
+                    </div>
+                    <div class="col-xs-6">
+                        <div style="text-align: center"><h1>我们能为你提供</h1></div>
+                        <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
+                        <span class="icon">
+                            <i class="icon-coin-yen"></i>
+                        </span>
+                            <div class="feature-copy">
+                                <h5>你应得的丰厚底薪与提成</h5>
+                            </div>
+                        </div>
+
+                        <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
+                        <span class="icon">
+                            <i class="icon-user-plus"></i>
+                        </span>
+                            <div class="feature-copy">
+                                <h5>结识更多有着相似经历相同话题的朋友</h5>
+                            </div>
+                        </div>
+
+                        <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
+                        <span class="icon">
+                            <i class="icon-home"></i>
+                        </span>
+                            <div class="feature-copy">
+                                <h5><a href="/assistedliving#weiguanjia">“恒心微管家”</a>的贴心服务</h5>
+                            </div>
+                        </div>
+                        <div style="text-align: center"><h1>你只需要做到</h1></div>
+                        <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
+                        <span class="icon">
+                            <i class="icon-star-full"></i>
+                        </span>
+                            <div class="feature-copy">
+                                <h5>让恒心的产品与服务帮助到更多有需求的人</h5>
+                            </div>
+                        </div>
+
+                        <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
+                        <span class="icon">
+                            <i class="icon-heart"></i>
+                        </span>
+                            <div class="feature-copy">
+                                <h5>用心完成我们每月的代理计划</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
             </div>
             <div class="col-xs-8 col-xs-offset-2 text-center heading-section animate-box fadeInUp animated" style="margin-top: 3em;">
@@ -136,49 +198,49 @@
 						<span class="icon">
 							<i class="icon-phone"></i>
 						</span>
-						<div class="feature-copy text-left">
-							<h4>电话：(86)028-8263-9653</h4>
-						</div>
-					</div>
+                        <div class="feature-copy text-left">
+                            <h4>电话：(86)028-8263-9653</h4>
+                        </div>
+                    </div>
                     <div class="feature-left">
 						<span class="icon">
 							<i class="icon-mail2"></i>
 						</span>
-						<div class="feature-copy text-left">
-							<h4>邮箱：info@hexedu.com</h4>
-						</div>
-					</div>
+                        <div class="feature-copy text-left">
+                            <h4>邮箱：info@hexedu.com</h4>
+                        </div>
+                    </div>
 
                     <div class="feature-left">
 						<span class="icon">
 							<i class="icon-location"></i>
 						</span>
-						<div class="feature-copy text-left">
-							<h4>地址：四川省成都市高新区天府大道中段666号希顿国际广场C座1203室</h4>
-						</div>
-					</div>
+                        <div class="feature-copy text-left">
+                            <h4>地址：四川省成都市高新区天府大道中段666号希顿国际广场C座1203室</h4>
+                        </div>
+                    </div>
 
                 </div>
                 <div class="col-xs-6" >
-{#                    <div id="map" style="width: 100%;height:400px;"></div>#}
-                        <div id="allmap" style="width: 100%;height:400px;border-radius: 5px;"></div>
-                        <script type="text/javascript">
-                            // 百度地图API功能
-                            var map = new BMap.Map("allmap");
-                            var point = new BMap.Point(104.07449,30.554679);
-                            map.centerAndZoom(point, 15);
-{#                            var marker = new BMap.Marker(point);  // 创建标注#}
-{#                            map.addOverlay(marker);               // 将标注添加到地图中#}
-{#                            marker.setAnimation(BMAP_ANIMATION_BOUNCE); //跳动的动画#}
-                            var marker = new BMap.Marker(point);// 创建标注
-                            map.addOverlay(marker);             // 将标注添加到地图中
-                            marker.disableDragging();
-                            map.addControl(new BMap.NavigationControl());        // 添加平移缩放控件
-                            map.addControl(new BMap.ScaleControl());             // 添加比例尺控件
-                            map.addControl(new BMap.OverviewMapControl());       //添加缩略地图控件
-                            map.enableScrollWheelZoom();                         //启用滚轮放大缩小
-                            map.disable3DBuilding();
-                        </script>
+                    {#                    <div id="map" style="width: 100%;height:400px;"></div>#}
+                    <div id="allmap" style="width: 100%;height:400px;border-radius: 5px;"></div>
+                    <script type="text/javascript">
+                        // 百度地图API功能
+                        var map = new BMap.Map("allmap");
+                        var point = new BMap.Point(104.07449,30.554679);
+                        map.centerAndZoom(point, 15);
+                        {#                            var marker = new BMap.Marker(point);  // 创建标注#}
+                        {#                            map.addOverlay(marker);               // 将标注添加到地图中#}
+                        {#                            marker.setAnimation(BMAP_ANIMATION_BOUNCE); //跳动的动画#}
+                        var marker = new BMap.Marker(point);// 创建标注
+                        map.addOverlay(marker);             // 将标注添加到地图中
+                        marker.disableDragging();
+                        map.addControl(new BMap.NavigationControl());        // 添加平移缩放控件
+                        map.addControl(new BMap.ScaleControl());             // 添加比例尺控件
+                        map.addControl(new BMap.OverviewMapControl());       //添加缩略地图控件
+                        map.enableScrollWheelZoom();                         //启用滚轮放大缩小
+                        map.disable3DBuilding();
+                    </script>
 
                 </div>
             </div>
