--- a/core/templates/web/aboutus.html
+++ b/core/templates/web/aboutus.html
@@ -124,8 +124,20 @@
                     <h1>招商与合作</h1>
                     <p>不论你是有我们尚缺的同类型业务，还是想要完善自己的版图，只要你有意愿帮助到更多的留学群体，都欢迎你联系我们，洽谈合作。</p>
                 </div>
+
                 <div class="text-center col-xs-12" style="margin-top: 2em;">
-                    <img src="/static/images/web/hz.png">
+                    <div class="col-xs-12 text-center" style="margin-bottom: 1em;margin-top: 1em;" >
+                        <h1>如果你是</h1>
+                    </div>
+                    <div class ="col-xs-12">
+                        <img src="/static/images/web/about/b2.png" alt="hexelite-恒心精英计划" style="width: 80%">
+                    </div>
+                    <div class="col-xs-12 text-center" style="margin-bottom: 1em;margin-top: 1em;" >
+                        <h1>我们能为你</h1>
+                    </div>
+                    <div class ="col-xs-12">
+                        <img src="/static/images/web/about/b1.png" alt="hexelite-恒心精英计划" style="width: 60%">
+                    </div>
                 </div>
                 <div class="row">
                     <div class="row">
