--- a/core/templates/web/aboutus.html
+++ b/core/templates/web/aboutus.html
@@ -29,8 +29,8 @@
                 <h3>关于恒心</h3>
                 <p>恒心教育，留学群体的一站式管家</p>
                 <p>我们向留学生群体提供从名校直通、课业辅导、学历学位认证到职业规划，创业贷款申请指导、生活辅助的一站式服务。同时，还针对国内有留学意愿的群体，开通了海外短期游学、就业培训、移民落户指导等项目。</p>
-                <p>We are unique, 我们只是比别人多了一点恒心</p>
-                <p>You are fortunate, 你只是比别人多了一点恒心</p>
+{#                <p>We are unique, 我们只是比别人多了一点恒心</p>#}
+{#                <p>You are fortunate, 你只是比别人多了一点恒心</p>#}
             </div>
         </div>
         <div class="row">
@@ -78,10 +78,10 @@
                     <div class="hexoco-text">
                         <h2>有广度更有深度的资源</h2>
                         <p>核心项目均为一手优质资源，保证最低的价格，最快的速度，最贴心的服务与最完美的结果；</p>
-                        <p>恒心有最稳健而资深的项目直接合作方：</p>
-                        <p>丹佛宏思学院</p>
-                        <p>猎聘网北美总部</p>
-                        <p>EKKO Development Group</p>
+                        <p>恒心有最稳健而资深的项目直接合作方：丹佛宏思学院,猎聘网北美总部,EKKO Development Group</p>
+{#                        <p></p>#}
+{#                        <p></p>#}
+{#                        <p></p>#}
                     </div>
                 </div>
             </div>
@@ -148,11 +148,11 @@
 
                     </div>
 
-                    <div class="col-xs-6">
-                        <img src="/static/images/web/about/elite.jpg " alt="hexelite-恒心精英计划" style="width: 100%">
+                    <div class="col-xs-6 text-center">
+                        <img src="/static/images/web/about/elite2.jpg " alt="hexelite-恒心精英计划" style="width: 70%">
                     </div>
                     <div class="col-xs-6">
-                        <div style="text-align: center"><h1>我们能为你提供</h1></div>
+                        <div style="text-align: left"><h1>我们能为你提供</h1></div>
                         <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                         <span class="icon">
                             <i class="icon-coin-yen"></i>
@@ -179,7 +179,7 @@
                                 <h5><a href="/assistedliving#weiguanjia">“恒心微管家”</a>的贴心服务</h5>
                             </div>
                         </div>
-                        <div style="text-align: center"><h1>你只需要做到</h1></div>
+                        <div style="text-align: left"><h1>你只需要做到</h1></div>
                         <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                         <span class="icon">
                             <i class="icon-star-full"></i>
@@ -212,6 +212,15 @@
 						</span>
                         <div class="feature-copy text-left">
                             <h4>电话：(86)028-8263-9653</h4>
+                        </div>
+                    </div>
+                    <div class="feature-left">
+						<span class="icon">
+{#							<i class="icon-tux"></i>#}
+                            <img src="/static/images/web/about/wechat.png" style="width:40px;margin-top: 4px;">
+						</span>
+                        <div class="feature-copy text-left">
+                            <h4>客服微信号：(86)028-8263-9653</h4>
                         </div>
                     </div>
                     <div class="feature-left">
