--- a/core/templates/web/certification.html
+++ b/core/templates/web/certification.html
@@ -42,8 +42,8 @@
                             <i class="icon-quill"></i>
                         </span>
                         <div class="feature-copy">
-                            <h5>国（境）外学历学位认证是在中国大陆范围内对于国（境）外文凭的真实有效性以及同中国大陆学历学位体系对应关系的唯一权威的确认方式。用于鉴别国外学历学位颁发机构的合法性，甄别国外学历学位的真实有效性，并与我国学历学位相对应关系提出咨询意见。</h5>
-                            <h5>也就是说，不认证国（境）外学历学位，等于其国外学历回国国内不受认可，相当于没留过学，可用学历只是出国留学前的学历。</h5>
+                            <h5>国（境）外学历学位认证是在中国大陆范围内对于国（境）外文凭的真实有效性以及同中国大陆学历学位体系对应关系的唯一权威的确认方式。用于鉴别国外学历学位颁发机构的合法性，甄别国外学历学位的真实有效性，并与我国学历学位相对应关系提出咨询意见。也就是说，不认证国（境）外学历学位，等于其国外学历回国国内不受认可，相当于没留过学，可用学历只是出国留学前的学历。</h5>
+{#                            <h5></h5>#}
                         </div>
                         <br/>
                     </div>
