--- a/core/templates/web/course-guide.html
+++ b/core/templates/web/course-guide.html
@@ -28,10 +28,10 @@
 
         function scrollfun(){
 
-{#            scrollnumber("#lunwen",'animated-ourservice',200);#}
-{#            scrollnumber("#zuoye",'animated-ourservice',10);#}
-{#            scrollnumber("#kaoqian",'animated-ourservice',10);#}
-{#            scrollnumber("#wangke",'animated-ourservice',10);#}
+            {#            scrollnumber("#lunwen",'animated-ourservice',200);#}
+            {#            scrollnumber("#zuoye",'animated-ourservice',10);#}
+            {#            scrollnumber("#kaoqian",'animated-ourservice',10);#}
+            {#            scrollnumber("#wangke",'animated-ourservice',10);#}
         }
 
         $(document).ready(function(e) {
@@ -52,9 +52,9 @@
 
     <div style="background: #fff; margin-top: 4em;margin-bottom: 3em;">
         <div class="hxco-container">
-{#            <div class="row feature-title text-center" id="lunwen">#}
-{#                <h3>论文提升</h3>#}
-{#            </div>#}
+            {#            <div class="row feature-title text-center" id="lunwen">#}
+            {#                <h3>论文提升</h3>#}
+            {#            </div>#}
             <div class="row">
                 <div class="col-md-3 col-sm-3">
                     <div class="index-feature-center function-summary animate-box" data-animate-effect="fadeIn">
@@ -119,8 +119,48 @@
 
     </div>
     <div class="container" style="margin-top: -3em;padding-bottom: 3em;">
-    <div class="col-xs-12 text-center">
-        <img src="/static/images/web/courseadvantage.png" style="width: 80%;height: auto;">
-    </div>
+        <div class="col-xs-12 text-center">
+            {#        <img src="/static/images/web/courseadvantage.png" style="width: 80%;height: auto;">#}
+            <div class="col-xs-12 table-responsive">
+                <table class="table table-bordered table-hover">
+                    <tr class ="info">
+                        <th class="text-center"></th>
+                        <th class="text-center">那些耽误过你的辅导“事故”</th>
+                        <th class="text-center">恒心给你的学术辅导</th>
+                    </tr>
+                    <tr class ="">
+                        <td class="text-center">团队</td>
+                        <td class="text-center">无所谓专业能力和学术水平，只要有需求，就有无名的名师</td>
+                        <td class="text-center">搜罗TOP100高校优秀毕业/在读生，一个等待着你到访的专业团队</td>
+                    </tr>
+                    <tr class ="">
+                        <td class="text-center">沟通</td>
+                        <td class="text-center">无所谓耐心与细致，入坑前你是上帝，缴费后祸福由天，好坏都是命
+</td>
+                        <td class="text-center">24小时答疑解惑，你的每一个声音每一种需求，都被我们记在心里，落于行动
+</td>
+
+                    </tr>
+                    <tr class ="">
+                        <td class="text-center">效率</td>
+                        <td class="text-center">上交截止日期临近，你都还没找到答题的切入点</td>
+                        <td class="text-center">上交截止日期并不重要，因为我们一定会提前教会你完美的答题套路</td>
+
+                    </tr>
+                    <tr class ="">
+                        <td class="text-center">质量</td>
+                        <td class="text-center">不管质量如何，承诺的辅导分析润色都提供了，你挂科好意思赖我？</td>
+                        <td class="text-center">如果怕我们调教出的全A太梦幻，你也可以在考试时只发八分力</td>
+
+                    </tr>
+                    <tr class ="">
+                        <td class="text-center">结束</td>
+                        <td class="text-center">统一模板指导出统一答案，这大规模作弊的罪名，也不算没由来</td>
+                        <td class="text-center">完美，也包括了你思路与作答的独一无二</td>
+
+                    </tr>
+                </table>
+            </div>
+        </div>
     </div>
 {% endblock %}
