--- a/core/templates/web/index.html
+++ b/core/templates/web/index.html
@@ -289,7 +289,7 @@
                             <div class="col-xs-3 animate-box">
                                 <div class="feature-center">
 
-                                    <span class="counter js-counter" data-from="0" data-to="121" data-speed="5000" data-refresh-interval="100">1</span>
+                                    <span class="counter js-counter" data-from="0" data-to="120" data-speed="5000" data-refresh-interval="100">1</span>
                                     <span style="font-size: 30px;color:rgba(63, 209, 234, 0.64);">名</span>
                                     <span class="counter-label">国内外优质名师汇聚</span>
 
@@ -298,7 +298,7 @@
                             <div class="col-xs-3 animate-box">
                                 <div class="feature-center">
 
-                                    <span class="counter js-counter" data-from="0" data-to="952" data-speed="5000" data-refresh-interval="100">1</span>
+                                    <span class="counter js-counter" data-from="0" data-to="500" data-speed="5000" data-refresh-interval="100">1</span>
                                     <span style="font-size: 30px;color:rgba(63, 209, 234, 0.64);">人</span>
                                     <span class="counter-label">从这里走向国外名校</span>
 
@@ -330,49 +330,74 @@
 
                         <div class="item testimony-slide active text-center">
                             <figure>
-                                <a  data-fancybox="gallery" href="/static/images/web/s1.jpg"  >
-                                    <img src="/static/images/web/s1.jpg" alt="user">
+                                <a  data-fancybox="gallery" href="/static/images/web/sample/1.jpg"  >
+                                    <img src="/static/images/web/sample/1.jpg" alt="user">
                                 </a>
                             </figure>
                         </div>
                         <div class="item testimony-slide active text-center">
                             <figure>
-                                <a  data-fancybox="gallery" href="/static/images/web/s2.jpg" >
-                                    <img src="/static/images/web/s2.jpg" alt="user">
+                                <a  data-fancybox="gallery" href="/static/images/web/sample/2.jpg" >
+                                    <img src="/static/images/web/sample/2.jpg" alt="user">
                                 </a>
                             </figure>
                         </div>
                         <div class="item testimony-slide active text-center">
                             <figure>
-                                <a  data-fancybox="gallery" href="/static/images/web/s3.jpg">
-                                    <img src="/static/images/web/s3.jpg" alt="user">
+                                <a  data-fancybox="gallery" href="/static/images/web/sample/3.jpg">
+                                    <img src="/static/images/web/sample/3.jpg" alt="user">
                                 </a>
                             </figure>
                         </div>
                         <div class="item testimony-slide active text-center">
                             <figure>
-                                <a  data-fancybox="gallery" href="/static/images/web/s4.jpg">
-                                    <img src="/static/images/web/s4.jpg" alt="user">
-                                </a>
-                            </figure>
-                        </div>
-
-
-                        <div class="item testimony-slide active text-center">
-                            <figure>
-                                <a  data-fancybox="gallery" href="/static/images/web/t1.png">
-                                    <img src="/static/images/web/t1.png" alt="user">
+                                <a  data-fancybox="gallery" href="/static/images/web/sample/4.jpg">
+                                    <img src="/static/images/web/sample/4.jpg" alt="user">
                                 </a>
                             </figure>
                         </div>
                         <div class="item testimony-slide active text-center">
                             <figure>
-                                <a  data-fancybox="gallery" href="/static/images/web/t2.png">
-                                    <img src="/static/images/web/t2.png" alt="user">
+                                <a  data-fancybox="gallery" href="/static/images/web/sample/5.jpg">
+                                    <img src="/static/images/web/sample/5.jpg" alt="user">
                                 </a>
                             </figure>
                         </div>
-
+                        <div class="item testimony-slide active text-center">
+                            <figure>
+                                <a  data-fancybox="gallery" href="/static/images/web/sample/6.jpg">
+                                    <img src="/static/images/web/sample/6.jpg" alt="user">
+                                </a>
+                            </figure>
+                        </div>
+                        <div class="item testimony-slide active text-center">
+                            <figure>
+                                <a  data-fancybox="gallery" href="/static/images/web/sample/01.jpg">
+                                    <img src="/static/images/web/sample/01.jpg" alt="user">
+                                </a>
+                            </figure>
+                        </div>
+                        <div class="item testimony-slide active text-center">
+                            <figure>
+                                <a  data-fancybox="gallery" href="/static/images/web/sample/02.jpg">
+                                    <img src="/static/images/web/sample/02.jpg" alt="user">
+                                </a>
+                            </figure>
+                        </div>
+                        <div class="item testimony-slide active text-center">
+                            <figure>
+                                <a  data-fancybox="gallery" href="/static/images/web/sample/04.jpg">
+                                    <img src="/static/images/web/sample/04.jpg" alt="user">
+                                </a>
+                            </figure>
+                        </div>
+                        <div class="item testimony-slide active text-center">
+                            <figure>
+                                <a  data-fancybox="gallery" href="/static/images/web/sample/03.jpg">
+                                    <img src="/static/images/web/sample/03.jpg" alt="user">
+                                </a>
+                            </figure>
+                        </div>
                     </div>
 
                 </div>
