--- a/core/templates/web/ksbk.html
+++ b/core/templates/web/ksbk.html
@@ -41,7 +41,7 @@
             </div>
         </div>
         <div class="row" style="margin-top: 1em;">
-            <div class="col-xs-8 col-xs-offset-2 text-center animate-box fadeInUp animated" style="margin-bottom: 2em;">
+            <div class="col-xs-8 col-xs-offset-2 text-center animate-box fadeInUp animated" style="margin-top: 1em; font-family: Arial;">
                 <h1>Bethesda University</h1>
             </div>
         </div>
