--- a/core/templates/web/zygh.html
+++ b/core/templates/web/zygh.html
@@ -25,34 +25,45 @@
                     <h1>合作伙伴</h1>
                 </div>
                 <div class="row">
-                    <div class="col-xs-4">
+                    <div class="col-xs-6">
                          <a href="https://www.macysinc.com/" target="_blank">
                         <div class="hexoco-project-item text-center" style="margin:0 auto; text-align:center">
-                            <img src="/static/images/web/zygh/Macy's.png" style="margin:20px auto auto auto;" alt="四川恒心前途教育咨询-梅西百货" class="img-responsive">
+                            <img src="/static/images/web/zygh/01.jpg" style="margin:20px auto auto auto;" alt="四川恒心前途教育咨询-梅西百货" class="img-responsive">
                             <div class="hexoco-text">
                                 <h2>梅西百货</h2>
                             </div>
                         </div>
                          </a>
                     </div>
-                    <div class="col-xs-4">
+                    <div class="col-xs-6">
+                        <a href="https://www.cvshealth.com/" target="_blank">
+                        <div class="hexoco-project-item">
+                            <img src="/static/images/web/zygh/04.jpg" style="margin:20px auto auto auto;" alt="四川恒心前途教育咨询-CVS"  class="img-responsive">
+                            <div class="hexoco-text">
+                                <h2>CVS</h2>
+                            </div>
+                        </div>
+                        </a>
+                    </div>
+                    <div class="col-xs-6">
                         <a href="https://www.aep.com/" target="_blank">
                             <div class="hexoco-project-item">
-                                <img src="/static/images/web/zygh/us_elecric.png" style="margin:20px auto auto auto;" alt="四川恒心前途教育咨询-美国电力" class="img-responsive">
+                                <img src="/static/images/web/zygh/02.jpg" style="margin:20px auto auto auto;" alt="四川恒心前途教育咨询-美国电力" class="img-responsive">
                                 <div class="hexoco-text">
                                     <h2>美国电力</h2>
                                 </div>
                             </div>
                         </a>
                     </div>
-                    <div class="col-xs-4">
-                        <a href="https://www.cvshealth.com/" target="_blank">
-                        <div class="hexoco-project-item">
-                            <img src="/static/images/web/zygh/cvs.png" style="margin:20px auto auto auto;" alt="四川恒心前途教育咨询-CVS"  class="img-responsive">
-                            <div class="hexoco-text">
-                                <h2>CVS</h2>
+
+                    <div class="col-xs-6">
+                        <a href="https://www.liepin.com/">
+                            <div class="hexoco-project-item">
+                                <img src="/static/images/web/zygh/03.jpg" style="margin:20px auto auto auto;" alt="四川恒心前途教育咨询-猎聘网合作" class="img-responsive">
+                                <div class="hexoco-text">
+                                    <h2>猎聘网</h2>
+                                </div>
                             </div>
-                        </div>
                         </a>
                     </div>
                 </div>
@@ -107,11 +118,11 @@
             </div>
             <div class ="row" style="padding-top:1em;">
                 <div class="col-xs-6 col-xs-offset-3">
-                    <a href="https://www.liepin.com/">
+                    <a href="https://www.holmescollege.net" target="_blank">
                         <div class="hexoco-project-item">
-                            <img src="/static/images/web/zygh/liepin.png" style="margin:20px auto auto auto;" alt="四川恒心前途教育咨询-猎聘网合作" class="img-responsive">
+                            <img src="/static/images/web/zygh/05.png" style="margin:20px auto auto auto;" alt="四川恒心前途教育咨询-猎聘网合作" class="img-responsive">
                             <div class="hexoco-text">
-                                <h2>猎聘网</h2>
+                                <h2>美国丹佛宏思学院</h2>
                             </div>
                         </div>
                     </a>
