--- a/core/templates/web/mxztc.html
+++ b/core/templates/web/mxztc.html
@@ -288,49 +288,74 @@
 
                         <div class="item testimony-slide active text-center">
                             <figure>
-                                <a  data-fancybox="gallery" href="/static/images/web/s1.jpg"  >
-                                    <img src="/static/images/web/s1.jpg" alt="user">
+                                <a  data-fancybox="gallery" href="/static/images/web/sample/1.jpg"  >
+                                    <img src="/static/images/web/sample/1.jpg" alt="user">
                                 </a>
                             </figure>
                         </div>
                         <div class="item testimony-slide active text-center">
                             <figure>
-                                <a  data-fancybox="gallery" href="/static/images/web/s2.jpg" >
-                                    <img src="/static/images/web/s2.jpg" alt="user">
+                                <a  data-fancybox="gallery" href="/static/images/web/sample/2.jpg" >
+                                    <img src="/static/images/web/sample/2.jpg" alt="user">
                                 </a>
                             </figure>
                         </div>
                         <div class="item testimony-slide active text-center">
                             <figure>
-                                <a  data-fancybox="gallery" href="/static/images/web/s3.jpg">
-                                    <img src="/static/images/web/s3.jpg" alt="user">
+                                <a  data-fancybox="gallery" href="/static/images/web/sample/3.jpg">
+                                    <img src="/static/images/web/sample/3.jpg" alt="user">
                                 </a>
                             </figure>
                         </div>
                         <div class="item testimony-slide active text-center">
                             <figure>
-                                <a  data-fancybox="gallery" href="/static/images/web/s4.jpg">
-                                    <img src="/static/images/web/s4.jpg" alt="user">
+                                <a  data-fancybox="gallery" href="/static/images/web/sample/4.jpg">
+                                    <img src="/static/images/web/sample/4.jpg" alt="user">
                                 </a>
                             </figure>
                         </div>
-
-{##}
-{#                        <div class="item testimony-slide active text-center">#}
-{#                            <figure>#}
-{#                                <a  data-fancybox="gallery" href="/static/images/web/t1.png">#}
-{#                                    <img src="/static/images/web/t1.png" alt="user">#}
-{#                                </a>#}
-{#                            </figure>#}
-{#                        </div>#}
-{#                        <div class="item testimony-slide active text-center">#}
-{#                            <figure>#}
-{#                                <a  data-fancybox="gallery" href="/static/images/web/t2.png">#}
-{#                                    <img src="/static/images/web/t2.png" alt="user">#}
-{#                                </a>#}
-{#                            </figure>#}
-{#                        </div>#}
-
+                        <div class="item testimony-slide active text-center">
+                            <figure>
+                                <a  data-fancybox="gallery" href="/static/images/web/sample/5.jpg">
+                                    <img src="/static/images/web/sample/5.jpg" alt="user">
+                                </a>
+                            </figure>
+                        </div>
+                        <div class="item testimony-slide active text-center">
+                            <figure>
+                                <a  data-fancybox="gallery" href="/static/images/web/sample/6.jpg">
+                                    <img src="/static/images/web/sample/6.jpg" alt="user">
+                                </a>
+                            </figure>
+                        </div>
+                        <div class="item testimony-slide active text-center">
+                            <figure>
+                                <a  data-fancybox="gallery" href="/static/images/web/sample/11.jpg">
+                                    <img src="/static/images/web/sample/11.jpg" alt="user">
+                                </a>
+                            </figure>
+                        </div>
+                        <div class="item testimony-slide active text-center">
+                            <figure>
+                                <a  data-fancybox="gallery" href="/static/images/web/sample/12.jpg">
+                                    <img src="/static/images/web/sample/12.jpg" alt="user">
+                                </a>
+                            </figure>
+                        </div>
+                        <div class="item testimony-slide active text-center">
+                            <figure>
+                                <a  data-fancybox="gallery" href="/static/images/web/sample/14.jpg">
+                                    <img src="/static/images/web/sample/14.jpg" alt="user">
+                                </a>
+                            </figure>
+                        </div>
+                        <div class="item testimony-slide active text-center">
+                            <figure>
+                                <a  data-fancybox="gallery" href="/static/images/web/sample/13.jpg">
+                                    <img src="/static/images/web/sample/13.jpg" alt="user">
+                                </a>
+                            </figure>
+                        </div>
                     </div>
 
             </div>
