--- a/core/templates/inc/master.html
+++ b/core/templates/inc/master.html
@@ -207,6 +207,7 @@
                     <img src="/static/images/web/wechat.jpg" style="width: 160px;height:160px;">
                     <h3 style="margin-top: 1em"><i class="icon-phone"></i><span style="margin-left: 5px;">(86)028-8263-9653</span></h3>
                     <h3 style="margin-top: 1em"><i class="icon-mail"></i><span style="margin-left: 5px;">info@hexedu.com</span></h3>
+                    <h3 style="margin-top: 1em"><i class="icon-tux"></i><span style="margin-left: 5px;">微信工作号：Hengxinqiantu</span></h3>
                 </div>
 
 
