--- a/core/templates/web/aboutus.html
+++ b/core/templates/web/aboutus.html
@@ -220,7 +220,7 @@
                             <img src="/static/images/web/about/wechat.png" style="width:40px;margin-top: 4px;">
 						</span>
                         <div class="feature-copy text-left">
-                            <h4>客服微信号：(86)028-8263-9653</h4>
+                            <h4>客服微信号：Hengxinqiantu</h4>
                         </div>
                     </div>
                     <div class="feature-left">
